# F2DUtilies

./: .gitignore  CMakeLists.txt
include/: hz_points_transformer.h  hz_stream_utils.h  hz_type_base.h  hzdt_arc.h  hzdt_byte_array.h  hzdt_circle.h  hzdt_circular_arc.h  hzdt_double_array.h  hzdt_float.h  hzdt_int.h  hzdt_int_array.h  hzdt_object.h  hzdt_point.h  hzdt_points_array.h  hzdt_string.h  hzdt_varint.h  hzdt_varint_array.h  hzdt_void.h  hzst_arc.h  hzst_begin_sheet.h  hzst_circle.h  hzst_circular_arc.h  hzst_clip.h  hzst_color.h  hzst_color_fill.h  hzst_dot.h  hzst_end_sheet.h  hzst_fill.h  hzst_fill_off.h  hzst_font_def.h  hzst_font_ref.h  hzst_layer.h  hzst_line_weight.h  hzst_miter_angle.h  hzst_miter_length.h  hzst_object_id.h  hzst_polyline.h  hzst_polytriangle.h  hzst_raster.h  hzst_text.h  (+1 more)
src/: hz_f2d_exporter.cpp  hz_points_transformer.cpp  hz_stream_utils.cpp  hzdt_arc.cpp  hzdt_byte_array.cpp  hzdt_circle.cpp  hzdt_circular_arc.cpp  hzdt_double_array.cpp  hzdt_float.cpp  hzdt_int.cpp  hzdt_int_array.cpp  hzdt_object.cpp  hzdt_point.cpp  hzdt_points_array.cpp  hzdt_string.cpp  hzdt_varint.cpp  hzdt_varint_array.cpp  hzdt_void.cpp  hzst_arc.cpp  hzst_begin_sheet.cpp  hzst_circle.cpp  hzst_circular_arc.cpp  hzst_clip.cpp  hzst_color.cpp  hzst_color_fill.cpp  hzst_dot.cpp  hzst_end_sheet.cpp  hzst_fill.cpp  hzst_fill_off.cpp  hzst_font_def.cpp  hzst_font_ref.cpp  hzst_layer.cpp  hzst_line_weight.cpp  hzst_miter_angle.cpp  hzst_miter_length.cpp  hzst_object_id.cpp  hzst_polyline.cpp  hzst_polytriangle.cpp  hzst_raster.cpp  hzst_text.cpp  (+2 more)
(+4 files in other folders)
